👌 UX: fix layout break in form

--- a/app/src/components/Dashboard/Header/styles.module.scss
+++ b/app/src/components/Dashboard/Header/styles.module.scss
@@ -20,7 +20,7 @@
   img {
     width: 6rem;
     height: 6rem;
-    margin-top: -2.5rem;
+    margin-top: -2.25rem;
   }
 
   span {
@@ -53,9 +53,6 @@
       padding: 0.7rem 1.1rem;
     }
 
-    button:first-child {
-      margin-left: 1rem;
-    }
     img {
       display: none;
     }
